--- a/android-systrace-sample-jetpack/build.gradle
+++ b/android-systrace-sample-jetpack/build.gradle
@@ -4,6 +4,11 @@ buildscript {
     repositories {
         google()
         mavenLocal()
+        gradlePluginPortal()//key point
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
+        maven { url = uri("https://jitpack.io") }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.4'
@@ -15,6 +20,11 @@ allprojects {
     repositories {
         mavenLocal()
         google()
+        gradlePluginPortal()//key point
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
+        maven { url = uri("https://jitpack.io") }
     }
 }
 
