--- a/android-systrace-sample-local-debug/build.gradle
+++ b/android-systrace-sample-local-debug/build.gradle
@@ -15,12 +15,26 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    signingConfigs {
+        release_config {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storeFile file("${rootProject.projectDir}/signkeystore/customs_as_key.keystore")
+            storePassword 'android'
         }
     }
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.release_config
+        }
+        release {
+            signingConfig signingConfigs.release_config
+            minifyEnabled false
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
 }
 
 buildscript {
@@ -28,6 +42,11 @@ buildscript {
         mavenLocal()
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        gradlePluginPortal()//key point
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
+        maven { url = uri("https://jitpack.io") }
     }
 
     dependencies {
