Title:根据本地修改 Detail:1、io.github.gracker:TraceFix:TRACEFIX_VERSION=0.0.6

--- a/android-systrace-sample-jetpack/build.gradle
+++ b/android-systrace-sample-jetpack/build.gradle
@@ -12,7 +12,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.4'
-        classpath("com.androidperf.tracefix:traceplugin:1.0")
+        //classpath("com.androidperf.tracefix:traceplugin:1.0")
+        classpath("io.github.gracker:TraceFix:${TRACEFIX_VERSION}"){ changing = true }
     }
 }
 
