--- a/android-systrace-sample-jetpack/gradle.properties
+++ b/android-systrace-sample-jetpack/gradle.properties
@@ -26,3 +26,4 @@ kapt.include.compile.classpath=false
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
+TRACEFIX_VERSION=0.0.6
